--- a/feedr/package.json
+++ b/feedr/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TODO",
+  "name": "feedr",
   "description": "TODO",
   "version": "0.0.1",
   "scripts": {
@@ -9,13 +9,12 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "compression": "^1.7.1",
     "polka": "next",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -25,8 +24,11 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "moment": "^2.29.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3"
   }
 }
