add rspec, user model spec

--- a/feedr_backend/Gemfile
+++ b/feedr_backend/Gemfile
@@ -23,6 +23,7 @@ gem 'simple_token_authentication'
 gem 'jwt'
 gem 'devise-jwt', '~> 0.7.0'
 gem 'rack-cors'
+gem 'geocoder'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
@@ -36,6 +37,8 @@ gem 'bootsnap', '>= 1.4.2', require: false
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'rspec-rails', '~> 4.0.1'
+  gem 'capybara'
 end
 
 group :development do
