--- a/feedr/package.json
+++ b/feedr/package.json
@@ -26,6 +26,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "jest": "^26.6.3",
     "moment": "^2.29.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
