--- a/feedr/package.json
+++ b/feedr/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "sapper dev",
     "test": "sapper dev '--port' '3050'",
+    "jest": "jest",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build"
