--- a/feedr/package.json
+++ b/feedr/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
-    "test": "sapper dev '--port' '3050'",
-    "jest": "jest",
+    "test": "jest src",
+    "test:watch": "npm run test -- --watch",
+    "test-env": "sapper dev '--port' '3050'",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build"
@@ -13,6 +14,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "compression": "^1.7.1",
+    "dotenv": "^8.2.0",
     "polka": "next",
     "sirv": "^1.0.0"
   },
@@ -27,12 +29,40 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/svelte": "^3.0.0",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "moment": "^2.29.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "svelte": "^3.17.3",
+    "svelte-jester": "^1.1.5"
+  },
+  "jest": {
+    "bail": false,
+    "moduleFileExtensions": [
+      "js",
+      "svelte"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.svelte$": "svelte-jester"
+    },
+    "verbose": true
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   }
 }
